fix layout issue in chrome

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,4 +1,4 @@
-html, body {
+body {
   width: 300px;
   font-size: 12px;
   font-family: sans-serif;
